# reflection

./: CMakeLists.txt  README.md  gcc.bat  vc.bat
include/: SymFlags.h  SymModule.h  SymType.h  Symbol.h  SymbolOptions.h  Type.h  function.h  instantiator.h  reflection.h
include/reflection/: ISymbol.h  ISymbolLoader.h  SymbolLoaderDIA.h
old_code/include/: SymTag.h  Symbol.h  SymbolOptions.h  callingconvention.h  instantiator.h  itostr.h
old_code/src/: SymModule.cpp  Symbol.cpp  SymbolOptions.cpp  Type.cpp
old_code/test/: main.cpp  test_function.cpp
src/: SymFlags.cpp  SymModule.cpp  SymTag.cpp  Symbol.cpp  SymbolLoaderDIA.cpp  SymbolOptions.cpp  Type.cpp  reflection.cpp
test/: CMakeLists.txt  interface.h  load_pdb.cpp  main.cpp  test_function.cpp  testinterface.cpp
test/test_data/: CMakeLists.txt  test.cpp
